--- a/src/sys/less/index.less
+++ b/src/sys/less/index.less
@@ -14,13 +14,14 @@ html, body {
         background: @gray-light;
         padding: 5px 10px;
         color: @body-bg;
+        background: #ff6600;
     }
 
     .g-bd {
         background: @gray-lighter;
         padding: 5px 10px;
         height: 100px;
-        background: url('../../img/small.png') no-repeat;
+        // background: url('../../img/small.png') no-repeat;
     }
 
     .g-ft {
